# cdc-algorithm-tester

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile.builder  LICENSE  Makefile  README.md  build-in-docker.sh  cdc_eval.R  index.html  marcels_playground.R  table_setup.R  tikz_setup.R
.github/workflows/: page.yml
_app/: version.json
_app/immutable/assets/: _page.CZwmpT93.css
_app/immutable/chunks/: entry.4RpjxQVL.js  entry.B6BB-Clc.js  entry.BhpZuPge.js  entry.CEdnEMo0.js  entry.CMSnVVj7.js  entry.DE2-_IZq.js  index.ILc-GHTl.js
_app/immutable/entry/: app.B-_Lu5Af.js  app.Beuh5h_a.js  app.CdaOl5Ix.js  app.CgjCXhlN.js  app.D2oafT4L.js  app.qckoC9-0.js  start.4uAT0L3U.js  start.BsANqmBH.js  start.C3z2jCMv.js  start.CBjNZD5O.js  start.D-t94re-.js  start.Dk4i9V6m.js
_app/immutable/nodes/: 0.86AnZIRb.js  1.B3ncxhS9.js  1.BhqCFKWH.js  1.CmOThfE0.js  1.CwY0GrlI.js  1.DKdgtWyq.js  1.V4TTzh_x.js  2.3i5Y9yKb.js  2.B3-eFULj.js
plotting/: .gitignore  README.md  base_setup.R  cdc_eval.R  eval_csd.R  eval_dedup.R  eval_file_sizes.R  eval_hash_value_distribution.R  eval_perf.R  parquet_translate.R  playquickcdc.R  plot_setup.R  util.R  website_export.R
scripts/: README.md  bfbc-analyze.sh  bfbc-divisors.sh  chunk-sizes.sh  dataset-composition.sh  datasets-entropy.sh  dedup.sh  file-sizes.sh  find-ae-params.py  get-bfbc-divisors.py  get-code.sh  get-empty.sh  get-iso.sh  get-jpeg.sh  get-lnx.sh  get-mov.sh  get-pdf.sh  get-png.sh  get-ram-param.py  get-rand.sh  get-src.sh  get-web.sh  get-zero.sh  hash-value-distributions.sh  obfuscate-dlf.sh  run-all-experiments.sh  speed-bench.sh  speed.sh  utils.sh  validate.sh
src/: adler.rs  buzhash.rs  gear.rs  logging.rs  main.rs  nop.rs  quickcdc.rs  rabin.rs
website/: package-lock.json  package.json  svelte.config.js
website/src/components/: CSDChart.svelte  DedupChart.svelte
website/src/data/: README.md  csd.json  dedup.csv  dedup.json
website/src/routes/: +page.svelte
