[package]
name = "cdc-algorithm-tester"
description = "A binary to test various content-defined chunking algorithms"
version = "0.1.0"
edition = "2021"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mrd0ll4r/cdc-algorithm-tester"
keywords = ["cdc", "chunking", "algorithms"]

[profile.release]
lto = "thin"
codegen-units = 1
#debug=1

[dependencies]
# Chunking algorithms we implemented ourselves
cdchunking = { git = "https://github.com/mrd0ll4r/cdchunking-rs", branch = "new-algorithms" }
#cdchunking = { path = "../cdchunking-rs"}

# Gearhash, SIMD-optimized
gearhash = "^0.1"

# Error handling
anyhow = "^1"

# Timestamps
chrono = "^0.4"

# Logging
log = "^0.4"
flexi_logger = "0.28"

# CLI parser
clap = { version = "^4", features = ["cargo", "derive"] }

# SHA1 for fingerprinting
sha1 = "^0.10"

# For reading/writing BFBC state with specified endianness.
byteorder = "^1"

# Adler32 implementation
adler32 = "^1"
